# avionics_sim

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doxyfile  ISA_atmosphere.cpp  ISA_atmosphere.hpp  LICENSE  README.md  US_1976_atmosphere.cpp  US_1976_atmosphere.hpp  de246  local-build.sh
.cmake/: clang_tools.cmake
.cmake/gtest/: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  docker_test.yaml
.github/workflows/: cmake.yml  main.yml
.styling/astyle/: astylerc
.swift_ci/adaptee/: channel.properties  default.properties  docker.properties  workflow.properties
.swift_ci/adaptee/scripts/: build.sh  inspect.sh  measure.sh  publish.sh  setup.sh  teardown.sh
.swift_ci/workflow/: Jenkinsfile  pipeline.template.sh
documentation/battery_model/: battery_test.ipynb
documentation/liftdrag_model/: README.md
documentation/liftdrag_model/mathematical_model/: HomeworkProblem.md  README.md
documentation/turbulence_model/: changes.md  dryden-metric.ipynb  dryden.ipynb  f18_harv.ipynb  gaussian.ipynb  turbulence.ipynb  von_karman.ipynb
include/: AerodynamicModel.hpp  AerodynamicState.hpp  AggregateWindModel.hpp  Airfoil.hpp  AvionicsSimException.hpp  Basis.hpp  Battery_model.hpp  Bilinear_interp.hpp  Coordinate_Utils.hpp  Differential_pressure_sensor_model.hpp  DrydenWindModel.hpp  Exponential_smoothing_filter.hpp  FourBarMechanism.h  GaussianMarkov_noise.hpp  GaussianWindModel.hpp  IPhysicsEnvironment.hpp  ITransmissionMechanism.h  IWindModel.hpp  LiftDragModelException.hpp  Lift_drag_model.hpp  Lift_drag_model_exception.hpp  LookupTable.hpp  MathUtilException.hpp  Math_util.hpp  Motor_current_consumption_model.hpp  Motor_model_exception.hpp  NPolynomial_Eval.hpp  PhysicsEnvironment.hpp  Property.hpp  SustainedWindModel.hpp  US_1976_atmosphere.hpp
include/avionics_sim/: AvionicsSimException.hpp  Battery_model.hpp  Bilinear_interp.hpp  Coordinate_Utils.hpp  Differential_pressure_sensor_model.hpp  Exponential_smoothing_filter.hpp  GaussianMarkov_noise.hpp  Lift_drag_model.hpp  Lift_drag_model_exception.hpp  Math_util.hpp  Motor_current_consumption_model.hpp  NPolynomial_Eval.hpp  NPolynomial_Fit.hpp  Poly_fit_3rd_degree.hpp  US_1976_atmosphere.hpp
include/swift_common/: Battery_model.hpp  Exponential_smoothing_filter.hpp  GaussianMarkov_noise.hpp  NPolynomial_Fit.hpp  Prop_wash_model.hpp
src/: AerodynamicModel.cpp  AerodynamicState.cpp  AggregateWindModel.cpp  Airfoil.cpp  Basis.cpp  Battery_model.cpp  Bilinear_interp.cpp  Coordinate_Utils.cpp  Differential_pressure_sensor_model.cpp  DrydenWindModel.cpp  Exponential_smoothing_filter.cpp  FourBarMechanism.cpp  GaussianMarkov_noise.cpp  GaussianWindModel.cpp  Lift_drag_model.cpp  LookupTable.cpp  Math_util.cpp  Motor_current_consumption_model.cpp  NPolynomial_Eval.cpp  NPolynomial_Fit.cpp  PhysicsEnvironment.cpp  Poly_fit_3rd_degree.cpp  Prop_wash_model.cpp  SustainedWindModel.cpp  US_1976_atmosphere.cpp
test/: CMakeLists.txt
test/scripts/: filtered_noise_psd.py
test/unit/: AerodynamicModelInterfaceTest.cpp  AggregateWindModelTest.cpp  AtmosphereTest.cpp  BatteryModelTest.cpp  BilinearInterpolationTest.cpp  CMakeLists.txt  CoordUtilsTest.cpp  DifferentialPressureSensorModelTest.cpp  DiscreteGaussianWindModelTest.cpp  DrydenWindModelTest.cpp  ExponentialSmoothingFilterTest.cpp  FourBarMechanismTest.cpp  GaussianMarkovNoiseTest.cpp  IWindModelTest.cpp  LiftDragModelInterfaceTest.cpp  LiftDragModelTest.cpp  LookupTableTest.cpp  MathUtilTest.cpp  PropWashTest.cpp  SustainedWindModelTest.cpp  TestUtils.hpp
tests/: LICENSE  README.md
tests/integration_tests/: CMakeLists.txt  CombinatoricalLiftDragTest.cpp  CombinatoricalLiftDragTest.h  Readme.md  Test_LiftDrag_Enhanced_Plugin_Single_Instance.cpp
tests/system_tests/: Readme.md  Test_LiftDrag_Enhanced_Plugin_Multiple_Instances.cpp
tests/test_runner/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake
tests/test_runner/Jenkins/: CodeCoverage.cmake  CodeStyle.cmake  JenkinsfileMetrics  JenkinsfileMetrics.CI  JenkinsfileNoMetrics
tests/test_runner/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/test_runner/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/test_runner/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/test_runner/include/: IntegrationTestEnvironment.h  Logger.h  TestEventListener.h  TestRunnerEnvironment.h  utilities.h  xmlparser.h
tests/test_runner/src/: IntegrationTestEnvironment.cpp  Logger.cpp  TestEventListener.cpp  TestRunnerEnvironment.cpp  main.cpp  utilities.cpp  xmlparser.cpp
tests/unit_tests/: Atan2Parameterized.h  CMakeLists.txt  CoordUtilsTest.cpp  CoordUtilsTest.h  Doxyfile  LiftDragCalculateDragParameterized.h  LiftDragCalculateDynamicPressureParameterized.h  LiftDragCalculateForcesMultiElementParameterized.h  LiftDragCalculateForcesParameterized.h  LiftDragCalculateForcesParamsStruct.h  LiftDragCalculateLateralForceParameterized.h  LiftDragCalculateLiftParameterized.h  LiftDragCalculateLocalVelocitiesParameterized.h  LiftDragCalculateWindAnglesParameterized.h  LiftDragLookupCDParameterized.h  LiftDragLookupCLParameterized.h  LiftDragSetAirDensityParameterized.h  LiftDragSetAlphaParameterized.h  LiftDragSetAreaParameterized.h  LiftDragSetBetaParameterized.h  LiftDragSetLateralAreaParameterized.h  LiftDragSetSpeedParameterized.h  LiftDragSetVelocityParameterized.h  MathUtilCalculateMeanParameterized.h  MathUtilCalculateRMSParameterized.h  MathUtilFPComparisonParameterized.h  MathUtilLinearMapParameterized.h  MathUtilPowIntegerParameterized.h  MotorModelSetExitVelocityParameterized.h  MotorModelSetThrustParameterized.h  Readme.md  Test_Atan2.cpp  Test_Bilinear_interp.cpp  Test_Coordinate_Utils.cpp  Test_Exponential_smoothing_filter.cpp  Test_GaussianMarkov_noise.cpp  Test_Lift_Drag_Calculate_Drag.cpp  Test_Lift_Drag_Calculate_Dynamic_Pressure.cpp  Test_Lift_Drag_Calculate_Forces.cpp  Test_Lift_Drag_Calculate_Forces_MultiElement.cpp  (+28 more)
(+15 files in other folders)
